# simple-rag

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
backend/app/: config.py  main.py
backend/app/api/routes/: documents.py  ingest.py  query.py
backend/app/core/: bm25.py  chunking.py  loaders.py  rag_chain.py  reranker.py  retriever.py  vectorstore.py  vision.py
backend/app/models/: schemas.py
frontend/: api_client.py  streamlit_app.py
tests/: test_ingestion.py
