[project]
name = "rag-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "flashrank>=0.2.10",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "rank-bm25>=0.2.2",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
